--- a/SynchroWebpage/style.css
+++ b/SynchroWebpage/style.css
@@ -169,6 +169,22 @@ body {
   font-size: 1rem;
 }
 
+/* ปุ่ม + New Song */
+.create-btn {
+  position: absolute;
+  top: 110px;
+  right: 290px;
+  padding: 12px 35px;
+  border: none;
+  background: linear-gradient(90deg, #5a00ff, #a800ff);
+  border-radius: 30px;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 1rem;
+}
+
 /* ===== SONG GRID (ไม่ responsive) ===== */
 .song-grid {
   display: grid;
